3.9.5 beta